--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.70"
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "com.google.android.material:material:1.2.0-rc01"
     implementation "com.giphy.sdk:ui:1.3.1"
     implementation "com.squareup.leakcanary:leakcanary-android:1.6.3"
     implementation "com.github.savvyapps:ToggleButtonLayout:1.2.0"
